
* New versioned release of libsframe: libsframe.so.1.  This release introduces
  versioned symbols with version node name LIBSFRAME_1.0.  This release also
  updates the ABI in an incompatible way: this includes removal of
  sframe_get_funcdesc_with_addr API, change in the behavior of
  sframe_fre_get_ra_offset and sframe_fre_get_fp_offset APIs.
  
Changes in 2.40:

* Objdump has a new command line option --show-all-symbols which will make it
  display all symbols that match a given address when disassembling.  (Normally
  only the first symbol that matches an address is shown).

* Add --enable-colored-disassembly configure time option to enable colored
  disassembly output by default, if the output device is a terminal.  Note,
  this configure option is disabled by default.
  
* DCO signed contributions are now accepted.

* objcopy --decompress-debug-sections now supports zstd compressed debug
  sections.  The new option --compress-debug-sections=zstd compresses debug
  sections with zstd.

* addr2line and objdump --dwarf now support zstd compressed debug sections.

* The dlltool program now accepts --deterministic-libraries and
  --non-deterministic-libraries as command line options to control whether or
  not it generates deterministic output libraries.  If neither of these options
  are used the default is whatever was set when the binutils were configured.
  
* readelf and objdump now have a newly added option --sframe which dumps the
  SFrame section.

Changes in 2.39:

* Add --no-weak/-W option to nm to make it ignore weak symbols.

* Add an option to objdump and readelf to prevent attempts to access debuginfod
  servers when following links.

* objcopy --weaken, --weaken-symbol, and --weaken-symbols now make ELF
  STB_GNU_UNIQUE symbols weak.

* objdump now supports syntax highlighting of disassembler output for some
  architectures.  Use the --disassembler-color=MODE command line flag, with
  mode being either off, color, or extended-color.
